testData/org/elixir_lang/inspection/type_variable_used_once/type_variable_used_once_flagged.ex
defmodule TypeVariableUsedOnce do
  @type single_type(<error descr="Type variable 'a' is used only once; reference it at least twice or use term()">a</error>) :: integer()
end
